src/report/snapshots/rtok__report__markdown__tests__zero.snap
---
source: src/report/markdown.rs
expression: out
---
# rtok report

Window 2026-09-01 → 2026-10-01 (30d) · store /tmp/rtok.db

## Window

| ledger | rows | covers |
| --- | --- | --- |
| calls | 0 of 0 | window (30d) |
| measurements | 0 | whole ledger (no row times) |
| usage | 0 | whole ledger (no row times) |

**No rows in window.** The store has no rows to report.

## Savings

Estimated tokens from `Measurement` rows only: est_before − est_after, net — an `expand` row counts negative, because retrieval costs tokens. A `Measurement` row carries no turn count, so these are floors, not context-token-turns.

No rows in window.

## Calls

Latency per surface, nearest-rank p50/p95 over the calls that recorded one.

No rows in window.

## Cache

Prompt-cache busts by cause, from the proxy's `usage` rows (whole ledger).

No rows in window.

## Expand

How often a live-zone pointer had to be expanded (`archive_decisions` rows, T5.4).

No rows in window.

## Config

Every effective key with its origin — the `config show --sources` page.

| key | value | source |
| --- | --- | --- |

0 keys.

## Doctor

Live probes (the `rtok doctor` page), not store rows.

```text
hooks 0
hooks check none found
mcp
proxy 
proxy openai 
BASH_MAX_OUTPUT_LENGTH (unset)
autoCompactWindow (unset)
read-share no data
agents
```

## Recommendations

No recommendations.
